syntax = "proto2";


message ComboListItemInfo {
         required string code = 1;
         required string code_name = 2;
}

//----SCH0201U10-------

message SCH0201U10GrdOrderListInfo{
	optional string pkkey = 1;
	optional string gubun = 2;
	optional string gwa = 3;
	optional string gwa_name = 4;
	optional string doctor = 5;
	optional string doctor_name = 6;
	optional string hangmog_code = 7;
	optional string hangmog_name = 8;
	optional string reser_time = 9;
	optional string seq = 10;
	optional string sort = 11;
}

message SCH0201U10LayReserInfo{
	optional string gwa = 1;
	optional string gwa_name = 2;
	optional string bunho = 3;
	optional string suname = 4;
	optional string reser_date = 5;
	optional string hangmog_name = 6;
	optional string reser_time = 7;
	optional string move_name = 8;
	optional string reser_day = 9;
	optional string age = 10;
	optional string birth = 11;
	optional string suname2 = 12;
	optional string jundal_part = 13;
	optional string reser_move_name = 14;
	optional string hangmog_code = 15;
	optional string jundal_table = 16;
	optional string hope_date = 17;
	optional string seq = 18;
	optional string sort = 19;
}

//----End SCH0201U10-------

//----SCH0201Q01----

message SchsSCH0201Q01ReserListItemInfo {

	optional string pksch0201 = 1;
	optional string in_out_gubun = 2;
	optional string fkocs = 3;
	optional string bunho = 4;
	optional string gwa = 5;
	optional string gumsaja = 6;
	optional string hangmog_code = 7;
	optional string jundal_table = 8;
	optional string jundal_part = 9;
	optional string reser_date = 10;
	optional string reser_time = 11;
	optional string input_date = 12;
	optional string input_id = 13;
	optional string suname = 14;
	optional string reser_yn = 15;
	optional string cancel_yn = 16;	
	optional string acting_date = 17;
	optional string hope_date = 18;
	optional string comments = 19;
	optional string hangmog_name = 20;
	optional string jundal_part_name = 21;
	optional string gwa_name = 22;	
	optional string ho_dong1 = 23;
	optional string sex = 24;
	optional string age = 25;
	optional string birth = 26;
	optional string input_gwa = 27;
	optional string doctor_name = 28;
	optional string upd_name = 29;
	optional string portable_yn = 30;	
}

//----End of SCH0201Q01----

//----SCH0201Q02----

message SchsSCH0201Q02ReserList02ItemInfo {

	optional string pksch0201 = 1;
	optional string in_out_gubun = 2;
	optional string fkocs = 3;
	optional string bunho = 4;
	optional string gwa = 5;
	optional string gumsaja = 6;
	optional string hangmog_code = 7;
	optional string jundal_table = 8;
	optional string jundal_part = 9;
	optional string reser_date = 10;
	optional string reser_time = 11;
	optional string input_date = 12;
	optional string input_id = 13;
	optional string suname = 14;
	optional string reser_yn = 15;
	optional string cancel_yn = 16;	
	optional string acting_date = 17;
	optional string hope_date = 18;
	optional string comments = 19;
	optional string hangmog_name = 20;	
	optional string gwa_name = 22;		
	optional string upd_name = 23;
	
}

message SchsSCH0201Q02ReserList03ItemInfo {	
	
	optional string reser_date = 1;
	optional string suname = 2;
	optional string in_out_gubun = 3;
	optional string bunho = 4;
	optional string acting_date = 5;
	optional string comments = 6;
	optional string jundal_part_name = 7;
	optional string gwa_name = 8;	
	optional string upd_name = 9;
	optional string cont_key = 10;	
	
}
//----End of SCH0201Q02----


//----SCH0201Q04----
message SchsSCH0201Q04PrartListItemInfo{

optional string jundal_table = 1;
optional string jundal_part = 2;
optional string jundal_part_name = 3;
}

message SchsSCH0201Q04GetMonthReserListInfo{

optional string holi_day = 1;
optional string reser_cnt = 2;
optional string inwon_cnt = 3;
}


message SchsSCH0201Q04ReserTimeListInfo{

optional string hangmog_code = 1;
optional string hangmog_name = 2;
optional string reser_date = 3;
optional string reser_time = 4;
optional string suname = 5;
optional string input_id = 6;
optional string in_out_gubun = 7;
optional string input_gwa = 8;
optional string sex = 9;
optional string age = 10;
optional string acting_date = 11;
optional string comments = 12;
optional string bunho = 13;
optional string doctor = 14;
optional string upd_name = 15;
}

//----End of SCH0201Q04----

//----SCH0201Q12----
message SCH0201Q12UpdateReserData
{
	optional string pkinj1002 = 1;
	optional string fksch0201 = 2;
	optional string reser_time = 3;
}

message SCH0201Q12GrdListItemInfo
{
	optional string kizyun_date = 1;
	optional string gwa = 2;
	optional string gwa_name = 3;
	optional string doctor = 4;
	optional string doctor_name = 5;
	optional string hangmog_code = 6;
	optional string hangmog_name = 7;
	optional string jundal_table = 8;
	optional string jundal_part = 9;
	optional string jundal_part_name = 10;
	optional string reser_time = 11;
	optional string reser_yn = 12;
	optional string act_yn = 13;
	optional string order_date = 14;
	optional string pksch = 15;
}
//----End of SCH0201Q12----

//------Start SCH0201U99
//Combo GumsaPart List
message ComboGumsaPartListItemInfo {
        required string code = 1;
        required string code_name = 2;
}

//Grd Order List
message SchsSCH0201U99GrdOrderListInfo {

	optional string hangmog_code = 1;
      optional string hangmog_name = 2;
      optional string jundal_table = 3;
      optional string jundal_part = 4;
      optional string jundal_part_name = 5;
      optional string pksch0201 = 6;
      optional string bunho = 7;
      optional string suname = 8;
      optional string gwa = 9;
      optional string gwa_name = 10;
      optional string doctor = 11;
      optional string doctor_name = 12;
      optional string order_date = 13;
      optional string emergency = 14;
      optional string reser_date = 15;      
      optional string reser_time = 16;
      optional string order_remark = 17;
      optional string reser_yn = 18;
      optional string pkout1001 = 19;
      optional string group_ser = 20;
}

//Grd Time List
message SchsSCH0201U99GrdTimeListInfo {

	optional string from_time = 1;
      optional string bunho = 2;
      optional string suname = 3;
      optional string hangmog_name = 4;
      optional string doctor_name = 5;
      optional string input_date = 6;
      optional string order_date = 7;
      optional string reser_date = 8;
      optional string pksch0201 = 9;
}

//Reser List
message SchsSCH0201U99ReserListInfo {

	optional string naewon_date = 1;
	optional string jinryo_pre_time = 2;
      optional string gwa_name = 3;
      optional string doctor_name = 4;
      
}

//Layout Common
message SchsSCH0201U99LayoutCommonListInfo {

optional string doctor_name = 1;
optional string reser_yn = 2;
}

//Layout Time List
message SchsSCH0201U99LayoutTimeListInfo {

	  optional string reser_date  = 1;
      optional string from_time  = 2;
      optional string bunho  = 3;
      optional string suname  = 4;
      optional string hangmog_code  = 5;
      optional string hangmog_name  = 6;
      optional string gwa GWA = 7;
      optional string doctor_name  = 8;
      optional string act_yn  = 9;
      
}
message SchsSCH0201U99DateScheduleItemInfo
{
	optional string dayofmon = 1;
	optional string check_yn = 2;
	optional string inwon = 3;
}
//--- End of SCH0201U99------

// --- [Start] SCH3001U00 --- 
message SCH3001U00GrdSCH0001Info
{
        optional string jundal_table = 1;
        optional string jundal_part = 2;
        optional string gumsaja = 3;
        optional string gumsaja_name = 4;
        optional string jundal_part_name = 5;
        optional string gwa_gubun = 6;
        optional string gumsa_time = 7;
        optional string data_row_state = 8;
}

message SCH3001U00GrdJukyongDateInfo
{
        optional string jukyong_date = 1;
        optional string jundal_table = 2;
        optional string jundal_part = 3;
        optional string gumsaja = 4;
        optional string old_jukyong_date = 5;
        optional string mon_day = 6;
        optional string tue_day = 7;
        optional string wed_day = 8;
        optional string thu_day = 9;
        optional string fri_day = 10;
        optional string sta_day = 11;
        optional string sun_day = 12;
}
message SCH3001U00GrdSCH3000Info
{
        optional string jukyong_date = 1;
        optional string jundal_table = 2;
        optional string jundal_part = 3;
        optional string gumsaja = 4;
        optional string yoil_gubun = 5; 
        optional string start_time = 6;
        optional string end_time = 7;
        optional string iwon = 8;
        optional string add_iwon = 9;
        optional string data_row_state = 10;
}
message SCH3001U00GrdSCH0002Info{
        optional string jundal_table = 1;
        optional string jundal_part = 2;
        optional string gumsaja = 3;
        optional string hangmog_code = 4;
        optional string hangmog_name = 5;
        optional string gumsa_time = 6;
        optional string data_row_state = 7;
}

message SCH3001U00GrdSCH3100Info{
    optional string jundal_table = 1;
    optional string jundal_part = 2;
    optional string gumsaja = 3;
    optional string reser_date = 4;
    optional string reser_yn = 5;
    optional string data_row_state = 7;        
}
message SCH3001U00GrdSCH3101Info
{
        optional string jundal_table = 1;
        optional string jundal_part = 2;
        optional string gumsaja = 3;
        optional string reser_date = 4;
        optional string start_time = 5;
        optional string end_time = 6;
        optional string iwon = 7;
        optional string add_iwon = 8;
        optional string data_row_state = 9;
 }

// --- [End] SCH3001U00 --- 